# llmptr

./: .gitignore  Cargo.toml  LICENSE  README.md
llmptr-infra/: Cargo.toml
llmptr-infra/src/: lib.rs  thinking.rs
scripts/: publish.ps1
src/: error.rs  format.rs  lib.rs  models.rs  pipeline.rs  registry.rs  translators.rs
src/translators/: antigravity_to_claude.rs  antigravity_to_gemini.rs  antigravity_to_openai_chat.rs  antigravity_to_openai_response.rs  antigravity_web_search.rs  claude_to_antigravity.rs  claude_to_claude.rs  claude_to_codex.rs  claude_to_gemini.rs  claude_to_openai_chat.rs  claude_to_openai_response.rs  codex_to_claude.rs  codex_to_gemini.rs  codex_to_openai_chat.rs  codex_to_openai_response.rs  gemini_to_claude.rs  gemini_to_codex.rs  gemini_to_gemini.rs  gemini_to_openai_chat.rs  gemini_to_openai_response.rs  openai_chat_to_antigravity.rs  openai_chat_to_claude.rs  openai_chat_to_codex.rs  openai_chat_to_gemini.rs  openai_chat_to_openai_chat.rs  openai_chat_to_openai_response.rs  openai_response_to_antigravity.rs  openai_response_to_claude.rs  openai_response_to_codex.rs  openai_response_to_gemini.rs  openai_response_to_openai_chat.rs  openai_response_to_openai_response.rs
src/translators/antigravity_to_claude/: request.rs  response.rs
src/translators/antigravity_to_gemini/: request.rs  response.rs
src/translators/antigravity_to_openai_chat/: request.rs  response.rs
src/translators/claude_to_antigravity/: request.rs  (+1 more)
tests/: parity_fixtures.rs
translator-infra/: Cargo.toml
translator-infra/src/: lib.rs  registry.rs  util.rs
(+152 files in other folders)
