[package]
name = "llmptr"
version = "0.1.0"
edition = "2024"
description = "AI API protocol translation matrix: convert between OpenAI, Claude, Gemini, Codex, Antigravity, Kimi, xAI formats"
license = "MIT"
repository = "https://github.com/AnNingUI/llmptr"
readme = "README.md"
keywords = ["ai", "openai", "claude", "gemini", "protocol", "translation", "api", "proxy", "llmptr"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
once_cell = "1"
llmptr-infra = { version = "0.1.0", path = "llmptr-infra" }
