[package]
name = "llmptr-infra"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Infrastructure layer for AI API protocol translation — model registry, thinking config, schema utilities"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[dev-dependencies]
serde_json = "1"
